fixed bug (thanks matyrobbrt)